--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,13 @@ body {
 
 }
 
+button {
+	background-color: var(--color--secondary);
+	border-radius: calc(var(--base) / 2);
+	cursor: pointer; /* Show the Mickey-Mouse hand! */
+	padding: calc(var(--base) / 2);
+}
+
    body {
        background-color: var(--color--primary);
        font-size: var(--body-size);
@@ -26,9 +33,6 @@ body {
        padding-block: calc(5 * var(--base-size));
    }
    
-   #main-content {
-    block-size: 75vh;
-    padding-top:  var(--base-size);
-    padding-bottom: calc(2 * var(--base-size)
-   }
+  
+
 
