--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,30 @@
+.oddity-script
+{ font-family: "oddity-script", sans-serif;
+font-weight: 300;
+font-style: normal;
+font-size: var(--big-size);
+} 
+
+:root {
+    --big-size: 2em;
+  }
+  
+  h1 {
+    font-size: 0.8em; 
+  }
+  
+  h1 span {
+    font-size: var(--big-size);
+  }
+  
+  .square {
+    position: absolute;
+    width: 210px;
+    height: 375px;
+    background-color: var(--color--secondary);
+    top: 40%; 
+    left: 40%; } 
+
 body {
     --spacing: 2em;
     --base-size: 12px;
@@ -27,6 +54,7 @@ button {
 
    h1 {
     font-size: var(--title-size);
+    color: var(--color--secondary);
    }
 
    header {
@@ -34,10 +62,10 @@ button {
        padding-block: calc(5 * var(--base-size));
    }
    
-   .image-block {
-    background-color: green;
-   }
 
-.smalldate {
-    font-size: 0.8em;
-}
+
+  h1 {
+    font-size: var(--title-size);
+    color: var(--color--secondary);
+    text-align: center; 
+  }
