--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,13 +17,7 @@ font-size: var(--big-size);
     font-size: var(--big-size);
   }
   
-  .square {
-    position: absolute;
-    width: 210px;
-    height: 375px;
-    background-color: var(--color--secondary);
-    top: 40%; 
-    left: 40%; } 
+ 
 
 body {
     --spacing: 2em;
@@ -42,8 +36,9 @@ body {
 
 button {
 	background-color: var(--color--secondary);
+  color: var(--color--primary);
 	border-radius: calc(var(--base) / 2);
-	cursor: pointer; /* Show the Mickey-Mouse hand! */
+	cursor: pointer; 
 	padding: calc(var(--base) / 2);
 }
 
@@ -68,4 +63,31 @@ button {
     font-size: var(--title-size);
     color: var(--color--secondary);
     text-align: center; 
+  }
+
+
+  .square {
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    top: 45%; 
+    left: 40%; } 
+
+    #pauseButton {
+      background-color: var(--color--secondary); 
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-top: 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+  }
+  
+  #pauseButton:hover {
+      background-color: #45a049; 
   }
