--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,6 +9,7 @@ font-size: var(--big-size);
     --big-size: 2em;
   }
   
+
   h1 {
     font-size: 0.8em; 
   }
@@ -33,6 +34,15 @@ body {
 
 }
 
+body {
+  background-image: url('../images/default.jpg');
+  background-attachment: fixed; /* Keeps the image fixed in place when scrolling */
+  background-size: cover; /* Makes sure the image covers the entire screen */
+  background-position: center; /* Centers the image */
+}
+
+
+
 button {
 	background-color: var(--color--secondary);
   color: var(--color--primary);
@@ -41,7 +51,6 @@ button {
 }
 
    body {
-       background-color: var(--color--primary);
        font-size: var(--body-size);
    }
 
@@ -92,3 +101,4 @@ button {
 .show-video li .video-block {
   display: block;
 }
+
