--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,9 +24,9 @@ body {
     --base-size: 12px;
     --gutter: calc(3 x var(--base-size));
    
-    --color--primary: #fbfbfb;
-    --color--secondary:#2D6115;
-    --color--background:BLACK; 
+    --color--primary: #black;
+    --color--secondary:greenyellow;
+    --color--background:white; 
     
     --title-size: 100px;
     --body-size: 20px;
@@ -105,14 +105,16 @@ button {
 #channel-blocks li {
   width: 250px; 
   height: 250px;  
-  border-radius: 0 160px;  
+  border-radius: 50%;  
   margin: 20px;  
-  display: inline-block; 
-  position: relative; 
+    position: relative; 
   background-color: greenyellow;  
   overflow: hidden;
 }
 /* source: https://codepen.io/yochans/pen/vYxPdKz */
+
+
+
 
 #channel-blocks li .content {
   width: 200%; 
