--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,26 +102,43 @@ button {
   display: block;
 }
 
+#channel-blocks {
+  display: flex; 
+  flex-wrap: wrap; 
+  gap: 20px; 
+}
+
 #channel-blocks li {
   width: 250px; 
   height: 250px;  
   border-radius: 50%;  
   margin: 20px;  
-    position: relative; 
+  position: relative; 
   background-color: greenyellow;  
-  overflow: hidden;
+  overflow: hidden;  
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
 }
-/* source: https://codepen.io/yochans/pen/vYxPdKz */
 
-
-
-
-#channel-blocks li .content {
-  width: 200%; 
-  height: 200%;  
-  position: center;
- 
+#channel-blocks li::before {
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 1; 
+  opacity: 0; 
+  transition: opacity 0.3s; 
 }
+/* shape inspired by https://codepen.io/huichops/pen/gObbxyw*/
+
+
+
+
+
 
 next steps: 
 /* add some type of overlay to green blocks*/
