--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,7 +73,6 @@ header {
 border: 10px solid var(--color--tertiary);
   width: 220px;
   height: 220px;
-
 }
 
 
@@ -152,7 +151,14 @@ a {
 
 
 next steps: 
+
+/* CSS ISSUES */ 
+/* why are images going back into circle shape when you hover over brown frame*/
 /* add some type of overlay to green blocks*/
 /* figure out how to make sideways scroll gallery smaller*/ 
-/* why are images going back into circle shape when you hover over brown frame*/
 
+
+/*JS ISSUES*/
+/* fix buttons on gallery page - why arent they working */ 
+/* why are some <li> classes empty (show in inspect mode) and how do i remove them*/
+/*modal isnt coming up*/
