adding large modal pop up / grid temlate

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -143,8 +143,9 @@ a {
   filter: blur(0);
 }
 
-dialog {
-  
+dialog [open] {
+  display: grid; 
+  grid-template-columns: repeat(2, minmax(0,1fr));
 }
 
 /* shape inspired by https://codepen.io/huichops/pen/gObbxyw*/
@@ -165,4 +166,4 @@ next steps:
 /*JS ISSUES*/
 /* fix buttons on gallery page - why arent they working */ 
 /* why are some <li> classes empty (show in inspect mode) and how do i remove them*/
-/*modal isnt coming up*/
+/*modal isnt coming up - its showing inside the block - how do i geti t to appear outside the block*/
