--- a/assets/styles.css
+++ b/assets/styles.css
@@ -262,15 +262,11 @@ img {
 
 
 
-
-
 /* CSS ISSUES */ 
-/* why are images going back into circle shape when you hover over brown frame*/
 /* add some type of overlay to green blocks*/
-/* figure out how to make sideways scroll gallery smaller*/ 
+/*make circles float like lily pads*/ 
+/*make dialog box look like work of art and frame */ 
 
 
 /*JS ISSUES*/
-
 /* fix buttons on gallery page - why arent they working */ 
-/*modal isnt coming up - its showing inside the block - how do i geti t to appear outside the block like the loom example*/
