--- a/assets/styles.css
+++ b/assets/styles.css
@@ -290,24 +290,22 @@ img {
 /* shape inspired by https://codepen.io/huichops/pen/gObbxyw*/
 
 
-
+/*TO DO LIST!!!!!!!!!!!!!!!!!!!!*/
 /*PRIORITY*/
 
 /* CSS ISSUES */ 
-/* make order of images random like pizza example*/ 
-
-/* add new layout style*/ 
-/* change all block names on ziwei*/ 
-/* make modal work*/
-/*make MOBILE FIRST*/
+/* 1. add new layout style AND PERFECT THE AESTHETIC*/ 
+/* make modal work FOR ALL BLOCKS*/
+/*Fix aesthetic of modal - image, then title and description on right side */
 /* make the backdrop work*/
 
-/*SECONDARY*/
 /*JS ISSUES*/
 /* fix buttons on gallery page - why arent they working */ 
+/* make order of images random like pizza example*/ 
+/*make MOBILE FIRST WORK*/
 
-/*LAST*/
 /*more*/ 
+/* change all block names on ziwei*/ 
 /* add arena images thumbnails and make sure they work */
 /* add read me */
 /* add attributions*/ 
