added modal for each

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -293,19 +293,23 @@ img {
 /*TO DO LIST!!!!!!!!!!!!!!!!!!!!*/
 /*PRIORITY*/
 
+/*JS ISSUES*/
+/* fix buttons on gallery page - why arent they working */ 
+
+
+
+/* make order of images random like pizza example ASK VIYAN FOR JS HELP!!!!!!!!!*/
+
 /* CSS ISSUES */ 
-/* 1. add new layout style AND PERFECT THE AESTHETIC*/ 
+/* add new layout style AND PERFECT THE AESTHETIC*/ 
 /* make modal work FOR ALL BLOCKS*/
 /*Fix aesthetic of modal - image, then title and description on right side */
 /* make the backdrop work*/
-
-/*JS ISSUES*/
-/* fix buttons on gallery page - why arent they working */ 
-/* make order of images random like pizza example*/ 
 /*make MOBILE FIRST WORK*/
 
+
 /*more*/ 
-/* change all block names on ziwei*/ 
+/* change all block names, captions on ziwei*/ 
 /* add arena images thumbnails and make sure they work */
 /* add read me */
 /* add attributions*/ 
